created a welcome index page. created a migration to add height to modelos table and set it as an acceptable value in the controller or else the app will not accept it.

--- a/app/views/modelos/_form.html.erb
+++ b/app/views/modelos/_form.html.erb
@@ -12,13 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :f_name %>
+    <%= f.label :First_Name %>
     <%= f.text_field :f_name %>
   </div>
 
   <div class="field">
-    <%= f.label :l_name %>
+    <%= f.label :Last_Name %>
     <%= f.text_field :l_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :Height %>
+    <%= f.text_field :height %>
   </div>
 
   <div class="actions">
