--- a/app/views/modelos/index.html.erb
+++ b/app/views/modelos/index.html.erb
@@ -1,13 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Modelos</h1>
+<h3><%= link_to 'Home', root_path %></h3>
+
+<h1>Models</h1>
 
 <table>
   <thead>
     <tr>
-      <th>F name</th>
-      <th>L name</th>
-      <th colspan="3"></th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Height</th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -16,6 +19,7 @@
       <tr>
         <td><%= modelo.f_name %></td>
         <td><%= modelo.l_name %></td>
+        <td><%= modelo.height %></td>
         <td><%= link_to 'Show', modelo %></td>
         <td><%= link_to 'Edit', edit_modelo_path(modelo) %></td>
         <td><%= link_to 'Destroy', modelo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Modelo', new_modelo_path %>
+<%= link_to 'New Model', new_modelo_path %>
