added bust and waist to modelos model and made changes to corresponding html files to display that data.

--- a/app/views/modelos/_form.html.erb
+++ b/app/views/modelos/_form.html.erb
@@ -22,8 +22,18 @@
   </div>
 
   <div class="field">
-    <%= f.label :Height %>
+    <%= f.label :height %>
     <%= f.text_field :height %>
+  </div>
+
+  <div class="field">
+    <%= f.label :bust %>
+    <%= f.text_field :bust%>
+  </div>
+
+  <div class="field">
+    <%= f.label :waist %>
+    <%= f.text_field :waist %>
   </div>
 
   <div class="actions">
