added hip and shoe size attributes to modelo model and made changes to display those attributes in the corresponding html files.

--- a/app/views/modelos/_form.html.erb
+++ b/app/views/modelos/_form.html.erb
@@ -36,6 +36,16 @@
     <%= f.text_field :waist %>
   </div>
 
+  <div class="field">
+    <%= f.label :hip %>
+    <%= f.text_field :hip %>
+  </div>
+
+  <div class="field">
+    <%= f.label :shoe %>
+    <%= f.text_field :shoe %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
