added eye and hair attributes for modelo modelo and made corresponding changes to html files.

--- a/app/views/modelos/_form.html.erb
+++ b/app/views/modelos/_form.html.erb
@@ -46,6 +46,16 @@
     <%= f.text_field :shoe %>
   </div>
 
+  <div class="field">
+    <%= f.label :eyes %>
+    <%= f.text_field :eyes %>
+  </div>
+
+  <div class="field">
+    <%= f.label :hair %>
+    <%= f.text_field :hair %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
