--- a/app/views/modelos/index.html.erb
+++ b/app/views/modelos/index.html.erb
@@ -14,7 +14,9 @@
       <th>Waist</th>
       <th>Hips</th>
       <th>Shoe Size</th>
-      <th colspan="7"></th>
+      <th>Eye Color</th>
+      <th>Hair Color</th>
+      <th colspan="9"></th>
     </tr>
   </thead>
 
@@ -28,6 +30,8 @@
         <td><%= modelo.waist %></td>
         <td><%= modelo.hip %></td>
         <td><%= modelo.shoe %></td>
+        <td><%= modelo.eyes %></td>
+        <td><%= modelo.hair %></td>
         <td><%= link_to 'Show', modelo %></td>
         <td><%= link_to 'Edit', edit_modelo_path(modelo) %></td>
         <td><%= link_to 'Destroy', modelo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
