--- a/app/views/modelos/show.html.erb
+++ b/app/views/modelos/show.html.erb
@@ -11,4 +11,4 @@
 </p>
 
 <%= link_to 'Edit', edit_modelo_path(@modelo) %> |
-<%= link_to 'Back', modelos_path %>
+<%= link_to 'Back', models_path %>
