--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
-<h1>This is the Welcome Page</h1>
+<h1>This is the Home Page</h1>
 
-<h3><%= link_to "Models", modelos_path %></h3>
+<h3><%= link_to "Models", models_path %></h3>
